# libreformer

./: .gitignore  README.md  multikit.toml  pyproject.toml  run_tests.sh
.specify/memory/: constitution.md
specs/001-full-format-async-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-full-format-async-engine/checklists/: requirements.md
specs/001-full-format-async-engine/contracts/: api.md
specs/002-test-fixture-gen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-test-fixture-gen/checklists/: requirements.md
specs/002-test-fixture-gen/contracts/: api.md
src/libreformer/: __init__.py  engine.py  logging.py  utils.py
src/libreformer/formats/: __init__.py  categories.py  data.py  registry.py
src/libreformer/schemas/: __init__.py  failed.py  format_info.py  succeed.py  transform_result.py
tests/: conftest.py  test_async_engine.py  test_backward_compat.py  test_engine.py  test_fixture_calc.py  test_fixture_edge.py  test_fixture_images.py  test_fixture_impress.py  test_fixture_writer.py  test_formats.py
tests/fixture_helpers/: __init__.py  calc.py  images.py  impress.py  writer.py
