[project]
name = "libreformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "invoke>=2.2.1",
    "loguru>=0.7.3",
    "multikit @ git+https://github.com/devcomfort/multikit@main",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "Pillow>=10.0.0",
    "odfpy>=1.4.1",
    "multikit @ git+https://github.com/devcomfort/multikit@main",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libreformer"]
